Формы. доделать иконки, почистить код, добавить состояния, разобраться с именами классов, все также определиться с размерами

--- a/form-elements.html
+++ b/form-elements.html
@@ -161,54 +161,82 @@
                                     </tr>
                                     <tr class="form-elements__field-style-blocked">
                                           <td class="form-elements__field-style-name">Заблокированно</td>
-                                          <td class="form-elements__field-blocked">
-                                                <div class="form-elements__field-blocked-container"><label
+                                          <td>
+                                                <div class="form-elements__field-blocked"><label
                                                             class="form-elements__field-blocked-label">Лейбл</label><input
-                                                            class="form-elements__field-blocked-input">
+                                                            class="form-elements__field-blocked-input1" type="text"
+                                                            placeholder="Заглушка" disabled>
                                                 </div>
                                           </td>
-                                          <td class="form-elements__field-blocked">
-                                                <div><label>Лейбл</label><input>
+                                          <td>
+                                                <div class="form-elements__field-blocked"><label
+                                                            class="form-elements__field-blocked-label">Лейбл</label><input
+                                                            class="form-elements__field-blocked-input2" type="text"
+                                                            placeholder="Заглушка" disabled>
                                                 </div>
                                           </td>
                                     </tr>
                                     <tr class="form-elements__field-style-icon">
                                           <td class="form-elements__field-style-name">С иконкой</td>
-                                          <td class="form-elements__field-icon">
-                                                <div><label>Лейбл</label><input>
+                                          <td>
+                                                <div class="form-elements__field-icon"><label
+                                                            class="form-elements__field-icon-label">Лейбл</label><input
+                                                            class="form-elements__field-icon-input1" type="text"
+                                                            placeholder="Заглушка">
                                                 </div>
                                           </td>
-                                          <td class="form-elements__field-icon">
-                                                <div><label>Лейбл</label><input>
+                                          <td>
+                                                <div class=" form-elements__field-icon"><label
+                                                            class="form-elements__field-icon-label">Лейбл</label><input
+                                                            class="form-elements__field-icon-input2" type="text"
+                                                            placeholder="Заглушка">
                                                 </div>
                                           </td>
                                     </tr>
-                                    <tr class="form-elements__field-style-button">
+                                    <tr class=" form-elements__field-style-button">
                                           <td class="form-elements__field-style-name">С кнопкой</td>
-                                          <td class="form-elements__field-button">
-                                                <div><label>Лейбл</label><input>
+                                          <td>
+                                                <div class="form-elements__field-button"><label
+                                                            class="form-elements__field-button-label">Лейбл</label><input
+                                                            class="form-elements__field-button-input1" type="text"
+                                                            placeholder="Заглушка">
                                                 </div>
                                           </td>
-                                          <td class="form-elements__field-button">
-                                                <div><label>Лейбл</label><input>
+                                          <td>
+                                                <div class="form-elements__field-button"><label
+                                                            class="form-elements__field-button-label">Лейбл</label><input
+                                                            class="form-elements__field-button-input2" type="text"
+                                                            placeholder="Заглушка">
                                                 </div>
                                           </td>
                                     </tr>
                                     <tr class="form-elements__field-style-text">
                                           <td class="form-elements__field-style-name">Текстовое поле</td>
-                                          <td class="form-elements__field-text">
-                                                <div><label>Лейбл</label>
-                                                      <div>Минимум 50 символов</div>
+                                          <td>
+                                                <div class="form-elements__field-text">
+                                                      <div class="form-elements__field-text-wrapper"><label
+                                                                  class="form-elements__field-text-label">Лейбл</label>
+                                                            <div class="form-elements__field-text-min">Минимум 50
+                                                                  символов</div>
+                                                      </div>
+                                                      <textarea class="form-elements__field-text-textarea1"
+                                                            placeholder="Заглушка"></textarea>
+                                                      <div class="form-elements__field-text-text">Это обязательное поле
+                                                      </div>
                                                 </div>
-                                                <textarea></textarea>
-                                                <div>Это обязательное поле</div>
                                           </td>
-                                          <td class="form-elements__field-text">
-                                                <div><label>Лейбл</label>
-                                                      <div>Минимум 50 символов</div>
+                                          <td>
+                                                <div class="form-elements__field-text">
+                                                      <div class="form-elements__field-text-wrapper"><label
+                                                                  class="form-elements__field-text-label">Лейбл</label>
+                                                            <div class="form-elements__field-text-min">Минимум 50
+                                                                  символов</div>
+                                                      </div>
+                                                      <textarea class="form-elements__field-text-textarea2"
+                                                            placeholder="Заглушка"></textarea>
+                                                      <div class="form-elements__field-text-text">Это обязательное поле
+                                                      </div>
                                                 </div>
-                                                <textarea></textarea>
-                                                <div>Это обязательное поле</div>
                                           </td>
                                     </tr>
 
