начало стилизации селекторов

--- a/form-elements.html
+++ b/form-elements.html
@@ -243,35 +243,64 @@
 
                               </table>
                         </section>
-                        <!-- <section class="typography__text-style">
-                        <h2 class="visually-hidden">Текст</h2>
-                        <table class="typography__text-style-table">
-                              <caption class="typography__text-style-headline">Текст</caption>
-                              <tr class="typography__text-style-subtitle">
-                                    <td class="typography__text-style-name">Подзаголовок</td>
-                                    <td class="typography__text-subtitle">Речь зашла об одном из соседних помещиков.
-                                          «Дрянь, аристократишко», —
-                                          равнодушно заметил Базаров, который встречался с ним в Петербурге.</td>
-                              </tr>
-                              <tr class="typography__text-style-paragraph">
-                                    <td class="typography__text-style-name">Параграф</td>
-                                    <td class="typography__text-paragraph">Прогуляться собираетесь? Вечерок-то будет
-                                          хорош, только грозы бы вот не
-                                          было.
-                                          А впрочем, и лучше, кабы освежило... И вдруг Раскольникову ясно припомнилась
-                                          вся
-                                          сцена третьего дня под воротами; он сообразил, что кроме дворников там стояло
-                                          тогда
-                                          еще несколько человек, стояли и женщины. Он припомнил один голос, предлагавший
-                                          вести
-                                          его прямо в квартал. Лицо говорившего не мог он вспомнить и даже теперь не
-                                          признавал, но ему памятно было, что он даже что-то ответил ему тогда,
-                                          обернулся к
-                                          нему...</td>
-                              </tr>
-                        </table>
-                  </section>
-                  <section class="typography__tech-style">
+                        <section class="form-elements__select-style">
+                              <h2 class="visually-hidden">Селекты</h2>
+                              <table class="form-elements__select-style-table">
+                                    <caption class="form-elements__select-style-headline">Селекты</caption>
+                                    <tr class="form-elements__select-style-ordinary">
+                                          <td class="form-elements__select-style-name">Обычный</td>
+                                          <td>
+                                                <div class="form-elements__select-ordinary">
+                                                      <label class="form-elements__select-ordinary-label">Лейбл</label>
+                                                      <select class="form-elements__field-ordinary-select1">
+                                                      </select>
+                                                </div>
+                                          </td>
+                                          <td>
+                                                <div class="form-elements__select-ordinary">
+                                                      <label class="form-elements__select-ordinary-label">Лейбл</label>
+                                                      <select class="form-elements__field-ordinary-select2">
+                                                      </select>
+                                                </div>
+                                          </td>
+                                    </tr>
+                                    <tr class="form-elements__select-style-icon">
+                                          <td class="form-elements__select-style-name">С иконкой</td>
+                                          <td>
+                                                <div class="form-elements__select-icon">
+                                                      <label class="form-elements__select-icon-label">Лейбл</label>
+                                                      <select class="form-elements__field-icon-select1">
+                                                      </select>
+                                                </div>
+                                          </td>
+                                          <td>
+                                                <div class="form-elements__select-icon">
+                                                      <label class="form-elements__select-icon-label">Лейбл</label>
+                                                      <select class="form-elements__field-icon-select2">
+                                                      </select>
+                                                </div>
+                                          </td>
+                                    </tr>
+                                    <tr class="form-elements__select-style-blocked">
+                                          <td class="form-elements__select-style-name">Заблокированный</td>
+                                          <td>
+                                                <div class="form-elements__select-blocked">
+                                                      <label class="form-elements__select-blocked-label">Лейбл</label>
+                                                      <select class="form-elements__field-blocked-select1">
+                                                      </select>
+                                                </div>
+                                          </td>
+                                          <td>
+                                                <div class="form-elements__select-blocked">
+                                                      <label class="form-elements__select-blocked-label">Лейбл</label>
+                                                      <select class="form-elements__field-blocked-select2">
+                                                      </select>
+                                                </div>
+                                          </td>
+                                    </tr>
+                              </table>
+                        </section>
+                        <!-- <section class="typography__tech-style">
                         <h2 class="visually-hidden">Технические</h2>
                         <table class="typography__tech-style-table">
                               <caption class="typography__tech-style-headline">Технические</caption>
