--- a/form-elements.html
+++ b/form-elements.html
@@ -253,6 +253,10 @@
                                                 <div class="form-elements__select-ordinary">
                                                       <label class="form-elements__select-ordinary-label">Лейбл</label>
                                                       <select class="form-elements__field-ordinary-select1">
+                                                            <option>Выберите...</option>
+                                                            <option>Первый</option>
+                                                            <option>Второй</option>
+                                                            <option>Третий</option>
                                                       </select>
                                                 </div>
                                           </td>
@@ -260,6 +264,10 @@
                                                 <div class="form-elements__select-ordinary">
                                                       <label class="form-elements__select-ordinary-label">Лейбл</label>
                                                       <select class="form-elements__field-ordinary-select2">
+                                                            <option>Выберите...</option>
+                                                            <option>Первый</option>
+                                                            <option>Второй</option>
+                                                            <option>Третий</option>
                                                       </select>
                                                 </div>
                                           </td>
@@ -270,6 +278,10 @@
                                                 <div class="form-elements__select-icon">
                                                       <label class="form-elements__select-icon-label">Лейбл</label>
                                                       <select class="form-elements__field-icon-select1">
+                                                            <option>Выберите...</option>
+                                                            <option>Первый</option>
+                                                            <option>Второй</option>
+                                                            <option>Третий</option>
                                                       </select>
                                                 </div>
                                           </td>
@@ -277,6 +289,10 @@
                                                 <div class="form-elements__select-icon">
                                                       <label class="form-elements__select-icon-label">Лейбл</label>
                                                       <select class="form-elements__field-icon-select2">
+                                                            <option>Выберите...</option>
+                                                            <option>Первый</option>
+                                                            <option>Второй</option>
+                                                            <option>Третий</option>
                                                       </select>
                                                 </div>
                                           </td>
@@ -287,6 +303,10 @@
                                                 <div class="form-elements__select-blocked">
                                                       <label class="form-elements__select-blocked-label">Лейбл</label>
                                                       <select class="form-elements__field-blocked-select1">
+                                                            <option>Выберите...</option>
+                                                            <option>Первый</option>
+                                                            <option>Второй</option>
+                                                            <option>Третий</option>
                                                       </select>
                                                 </div>
                                           </td>
@@ -294,6 +314,10 @@
                                                 <div class="form-elements__select-blocked">
                                                       <label class="form-elements__select-blocked-label">Лейбл</label>
                                                       <select class="form-elements__field-blocked-select2">
+                                                            <option>Выберите...</option>
+                                                            <option>Первый</option>
+                                                            <option>Второй</option>
+                                                            <option>Третий</option>
                                                       </select>
                                                 </div>
                                           </td>
