начало разметки блока с кнопками

--- a/form-elements.html
+++ b/form-elements.html
@@ -324,47 +324,227 @@
                                     </tr>
                               </table>
                         </section>
-                        <!-- <section class="typography__tech-style">
-                        <h2 class="visually-hidden">Технические</h2>
-                        <table class="typography__tech-style-table">
-                              <caption class="typography__tech-style-headline">Технические</caption>
-                              <tr class="typography__tech-style-link">
-                                    <td class="typography__tech-style-name">Ссылка</td>
-                                    <td class="typography__tech-link"><a class="typography__tech-link-a" href="">Перейти
-                                                на сайт Студии</a></td>
-                              </tr>
-                              <tr class="typography__tech-style-auxiliary">
-                                    <td class="typography__tech-style-name">Вспомогательный</td>
-                                    <td class="typography__tech-auxiliary">Photo: Getty Images / Ilnur Kalimullin</td>
-                              </tr>
-                              <tr class="typography__tech-style-label">
-                                    <td class="typography__tech-style-name">Лейбл</td>
-                                    <td class="typography__tech-label">НАЗВАНИЕ КОМПАНИИ</td>
-                              </tr>
-                        </table>
+                        <section class="form-elements__button-style">
+                              <h2 class="visually-hidden">Кнопки</h2>
+                              <table class="form-elements__button-style-table">
+                                    <caption class="form-elements__button-style-headline"><span>Кнопки</span>
+                                          <p class="form-elements__button-style-notice">Важно: внутри форм по
+                                                возможности
+                                                следует размещать только Submit Button</p>
+                                    </caption>
 
-                  </section>
-                  <section class="typography__span-style">
-                        <h2 class="visually-hidden">Span</h2>
-                        <table class="typography__span-style-table">
-                              <caption class="typography__span-style-headline">Технические</caption>
-                              <tr class="typography__span-style-marker">
-                                    <td class="typography__span-style-name">Верхний регистр и курсив</td>
-                                    <td class="typography__span-marker"><span
-                                                class="typography__span-uppercase">ЮНЕСКО</span> —
-                                          специализированное учреждение
-                                          <em class="typography__span-italic">Организации Объединённых Наций</em>
-                                          по
-                                          вопросам образования, науки и культуры</td>
-                              </tr>
-                              <tr class="typography__span-style-link">
-                                    <td class="typography__span-style-name">Ссылка</td>
-                                    <td class="typography__span-link">Посмотреть результаты отбора можно <a
-                                                class="typography__span-link-a" href="">на сайте нашей
-                                                Студии</a></td>
-                              </tr>
-                        </table>
-                  </section> -->
+                                    <tr class="form-elements__button-style-ordinary">
+                                          <td class="form-elements__button-style-name">Обычная</td>
+                                          <td>
+                                                <div class="form-elements__button-ordinary">
+
+                                                </div>
+                                          </td>
+                                          <td>
+                                                <div class="form-elements__button-ordinary">
+
+                                                </div>
+                                          </td>
+                                    </tr>
+                                    <tr class="form-elements__button-style-round">
+                                          <td class="form-elements__button-style-name">Скругленная</td>
+                                          <td>
+                                                <div class="form-elements__button-round">
+
+                                                </div>
+                                          </td>
+                                          <td>
+                                                <div class="form-elements__button-round">
+
+                                                </div>
+                                          </td>
+                                    </tr>
+                                    <tr class="form-elements__button-style-secondary">
+                                          <td class="form-elements__button-style-name">Второстепенная</td>
+                                          <td>
+                                                <div class="form-elements__button-secondary">
+
+                                                </div>
+                                          </td>
+                                          <td>
+                                                <div class="form-elements__button-secondary">
+
+                                                </div>
+                                          </td>
+                                    </tr>
+                                    <tr class="form-elements__button-style-danger">
+                                          <td class="form-elements__button-style-name">Опасность</td>
+                                          <td>
+                                                <div class="form-elements__button-danger">
+
+                                                </div>
+                                          </td>
+                                          <td>
+                                                <div class="form-elements__button-danger">
+
+                                                </div>
+                                          </td>
+                                    </tr>
+                                    <tr class="form-elements__button-style-icon">
+                                          <td class="form-elements__button-style-name">С иконкой</td>
+                                          <td>
+                                                <div class="form-elements__button-icon">
+
+                                                </div>
+                                          </td>
+                                          <td>
+                                                <div class="form-elements__button-icon">
+
+                                                </div>
+                                          </td>
+                                    </tr>
+                                    <tr class="form-elements__button-style-roundicon">
+                                          <td class="form-elements__button-style-name">Скругленная с иконкой</td>
+                                          <td>
+                                                <div class="form-elements__button-roundicon">
+
+                                                </div>
+                                          </td>
+                                          <td>
+                                                <div class="form-elements__button-roundicon">
+
+                                                </div>
+                                          </td>
+                                    </tr>
+                                    <tr class="form-elements__button-style-dropdown">
+                                          <td class="form-elements__button-style-name">Кнопка-дропдаун</td>
+                                          <td>
+                                                <div class="form-elements__button-dropdown">
+
+                                                </div>
+                                          </td>
+                                          <td>
+                                                <div class="form-elements__button-dropdown">
+
+                                                </div>
+                                          </td>
+                                    </tr>
+                                    <tr class="form-elements__button-style-icondropdown">
+                                          <td class="form-elements__button-style-name">Иконка-дропдаун</td>
+                                          <td>
+                                                <div class="form-elements__button-icondropdown">
+
+                                                </div>
+                                          </td>
+                                          <td>
+                                                <div class="form-elements__button-icondropdown">
+
+                                                </div>
+                                          </td>
+                                    </tr>
+                                    <tr class="form-elements__button-style-full">
+                                          <td class="form-elements__button-style-name">На всю ширину</td>
+                                          <td>
+                                                <div class="form-elements__button-full">
+
+                                                </div>
+                                          </td>
+                                          <td>
+                                                <div class="form-elements__button-full">
+
+                                                </div>
+                                          </td>
+                                    </tr>
+                                    <tr class="form-elements__button-style-secondaryfull">
+                                          <td class="form-elements__button-style-name">Второстепенная на всю ширину</td>
+                                          <td>
+                                                <div class="form-elements__button-secondaryfull">
+
+                                                </div>
+                                          </td>
+                                          <td>
+                                                <div class="form-elements__button-secondaryfull">
+
+                                                </div>
+                                          </td>
+                                    </tr>
+                                    <tr class="form-elements__button-style-blocked">
+                                          <td class="form-elements__button-style-name">Заблокированная</td>
+                                          <td>
+                                                <div class="form-elements__button-blocked">
+
+                                                </div>
+                                          </td>
+                                          <td>
+                                                <div class="form-elements__button-blocked">
+
+                                                </div>
+                                          </td>
+                                    </tr>
+                                    <tr class="form-elements__button-style-small">
+                                          <td class="form-elements__button-style-name">Маленькая</td>
+                                          <td>
+                                                <div class="form-elements__button-small">
+
+                                                </div>
+                                          </td>
+                                          <td>
+                                                <div class="form-elements__button-small">
+
+                                                </div>
+                                          </td>
+                                    </tr>
+                                    <tr class="form-elements__button-style-smallround">
+                                          <td class="form-elements__button-style-name">Маленькая скругленная</td>
+                                          <td>
+                                                <div class="form-elements__button-smallround">
+
+                                                </div>
+                                          </td>
+                                          <td>
+                                                <div class="form-elements__button-smallround">
+
+                                                </div>
+                                          </td>
+                                    </tr>
+                                    <tr class="form-elements__button-style-smallsecondary">
+                                          <td class="form-elements__button-style-name">Маленькая второстепенная</td>
+                                          <td>
+                                                <div class="form-elements__button-smallsecondary">
+
+                                                </div>
+                                          </td>
+                                          <td>
+                                                <div class="form-elements__button-smallsecondary">
+
+                                                </div>
+                                          </td>
+                                    </tr>
+                                    <tr class="form-elements__button-style-text">
+                                          <td class="form-elements__button-style-name">Текстовая с иконкой</td>
+                                          <td>
+                                                <div class="form-elements__button-text">
+
+                                                </div>
+                                          </td>
+                                          <td>
+                                                <div class="form-elements__button-text">
+
+                                                </div>
+                                          </td>
+                                    </tr>
+                                    <tr class="form-elements__button-style-smalltext">
+                                          <td class="form-elements__button-style-name">Маленькая текстовая с иконкой
+                                          </td>
+                                          <td>
+                                                <div class="form-elements__button-smalltext">
+
+                                                </div>
+                                          </td>
+                                          <td>
+                                                <div class="form-elements__button-smalltext">
+
+                                                </div>
+                                          </td>
+                                    </tr>
+                              </table>
+                        </section>
+
                   </div>
             </main>
       </div>
